--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
   <!-- Header -->
   <header class="masthead bg-primary text-white text-center">
     <div class="container">
-      <!--
-      <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt=""> 원래 사진 -->
-      <iframe width="853" height="480" src="https://www.youtube.com/embed/aFxHC3mRqeA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+      
+      <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt=""> 원래 사진 
+      <!--<iframe width="853" height="480" src="https://www.youtube.com/embed/aFxHC3mRqeA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        -->
       <br>
       <br>
 
