--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
       
       <!--<img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt=""> 원래 사진 -->
-      <iframe width="853" height="480" src="https://www.youtube.com/watch?v=gGlVkOiYRus&t=238s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/gGlVkOiYRus" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         
       <br>
       <br>
